profil page with popup

--- a/design-system.html
+++ b/design-system.html
@@ -730,7 +730,48 @@
             <div class="rond2"></div>
           </div>
           
-
+        <div id="popup1" class="overlay text-base">
+          <div class="popup">
+            <span class="headpop">
+              
+              <a class="close" href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                  <path stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M17.577 5.876 5.86 17.56M5.85 5.85l11.702 11.702"/>
+                </svg>
+              </a>
+              <h2 class="text-title">Cargo gris</h2>
+              <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_564_6211)">
+                  <path d="M19 0H0V19H19V0Z" fill="white" fill-opacity="0.01"/>
+                  <path d="M2.10752 17.219L5.46618 17.2191L17.7816 4.90367L14.4229 1.54492L2.10742 13.8603L2.10752 17.219Z" stroke="#1B1B1B" stroke-width="1.5" stroke-linejoin="round"/>
+                  <path d="M11.0645 4.90332L14.4232 8.26208" stroke="#1B1B1B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                </g>
+                <defs>
+                  <clipPath id="clip0_564_6211">
+                    <rect width="19" height="19" fill="white"/>
+                  </clipPath>
+                </defs>
+              </svg>
+            </span>
+            <img src="img/cargo gris.png" alt="">
+            <h3 class="text-button2 announce">Votre annonce</h3>
+            <p class="text-base text-body announce">Pantalon de la marque Dickies. Il est en superbe état mais ne me sert que rarement alors donne lui une seconde vie.</p>
+            <span class="TAGbar">
+              <button class="text-base text-tag tag">
+                  Gris
+              </button>
+              <button class="text-base text-tag tag">
+                Cargo
+              </button>
+              <button class="text-base text-tag tag">
+                S
+              </button>
+              <button class="text-base text-tag tag">
+                Pantalon
+              </button>
+            </span>  
+          </div>
+        </div>
 
 
 
