--- a/home-green.html
+++ b/home-green.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Page d'accueil sur le vert</title>
     <link rel="stylesheet" href="style-home-green.css">
     <script src="script.js"></script>
 </head>
@@ -77,7 +77,7 @@
         <p>0 km</p>
         <p>10 km</p>
     </span>
-    
+
     <h2 class="text-base text-button2 results">Résultats</h2>
     <section class="gridcard">
         <!-- Card vêtement -->
