--- a/design-system.html
+++ b/design-system.html
@@ -65,13 +65,17 @@
     <div class="text-base text-button résa">
       <div class="select">
         <img class="calendar" src="img/calendar.png" alt="Calendrier des réservations"/>
-        <div class="date frectangle"><p>20</p></div>
-        <div class="date d1"><input type="checkbox" id="date"></div>
-        <div class="date d2"><input type="checkbox" id="dat2">
-          <button class="text-tag buttonR rés" id="réservation">
-            Réservation
-          </button>
+        <div class="pop" id="pop1">
+          <div class="date frectangle"><p>20</p></div>
+          <a href="messages.html">
+            <button class="text-tag buttonR rés" id="réservation">
+              Réservation
+            </button>
+          </a>
         </div>
+        <div class="date d1"><input type="checkbox" id="date"></div>
+        <a class="date d2" href="#pop1"><input type="checkbox" id="dat2"></a>
+        
       </div>
       <div class="text-base disponibility">
         <div class="state"></div>
