--- a/page-article.html
+++ b/page-article.html
@@ -87,6 +87,10 @@
     <article class="card">
     <!-- Image du vêtement -->
         <div class="img orange4"></div>
+    
+    <p class="legende">Déjà porté 2 fois dans votre entourage</p>
+    <p class="description">Loue le temps d’une soirée ma veste orange de chez Bershka. Idéale pour tenir chaud lors de sortie prolongées dans le froid. </p>
+    <p class="tag2">manteau</p>
 
 </head>
 <body>
