--- a/design-system.html
+++ b/design-system.html
@@ -63,10 +63,9 @@
       </div>
     </article>
     <div class="text-base text-button résa">
-      <div class="select">
         <img class="calendar" src="img/calendar.png" alt="Calendrier des réservations"/>
         <div class="pop" id="pop1">
-          <div class="date frectangle"><p>20</p></div>
+          <div class="date frectangle"><a href="#">20</a></div>
           <a href="messages.html">
             <button class="text-tag buttonR rés" id="réservation">
               Réservation
@@ -75,9 +74,8 @@
         </div>
         <div class="date d1"><input type="checkbox" id="date"></div>
         <a class="date d2" href="#pop1"><input type="checkbox" id="dat2"></a>
-        
-      </div>
-      <div class="text-base disponibility">
+
+        <div class="text-base disponibility">
         <div class="state"></div>
         <span class="text-button dispo">Non disponible</span>
       </div>
