--- a/home-green.html
+++ b/home-green.html
@@ -86,9 +86,9 @@
           <div class="img green1"></div>
         <!-- Valeur du vêtement -->
           <div class="bottom">
-            <div class="valueclothe text-base text-button">77</div>
+            <div class="valueclothe text-base text-button">3</div>
         <!-- Nom du vêtement -->
-            <span class="name text-base text-body">Vêtement</span>
+            <span class="name text-base text-body">Chemise</span>
         <!-- Like -->
             <div class="like">
               <input type="checkbox" id="lik1" aria-label="add a like">
@@ -100,9 +100,9 @@
               <div class="img green2"></div>
             <!-- Valeur du vêtement -->
               <div class="bottom">
-                <div class="valueclothe text-base text-button">77</div>
+                <div class="valueclothe text-base text-button">6</div>
             <!-- Nom du vêtement -->
-                <span class="name text-base text-body">Vêtement</span>
+                <span class="name text-base text-body">Short</span>
             <!-- Like -->
                 <div class="like">
                   <input type="checkbox" id="lik1" aria-label="add a like">
@@ -114,9 +114,9 @@
             <div class="img green3"></div>
             <!-- Valeur du vêtement -->
             <div class="bottom">
-                <div class="valueclothe text-base text-button">77</div>
+                <div class="valueclothe text-base text-button">9</div>
             <!-- Nom du vêtement -->
-                <span class="name text-base text-body">Vêtement</span>
+                <span class="name text-base text-body">Talons</span>
             <!-- Like -->
                 <div class="like">
                   <input type="checkbox" id="lik1" aria-label="add a like">
@@ -128,9 +128,9 @@
             <div class="img green4"></div>
             <!-- Valeur du vêtement -->
             <div class="bottom">
-                <div class="valueclothe text-base text-button">77</div>
+                <div class="valueclothe text-base text-button">12</div>
             <!-- Nom du vêtement -->
-                <span class="name text-base text-body">Vêtement</span>
+                <span class="name text-base text-body">Robe</span>
             <!-- Like -->
                 <div class="like">
                   <input type="checkbox" id="lik1" aria-label="add a like">
@@ -142,9 +142,9 @@
             <div class="img green5"></div>
             <!-- Valeur du vêtement -->
             <div class="bottom">
-                <div class="valueclothe text-base text-button">77</div>
+                <div class="valueclothe text-base text-button">5</div>
             <!-- Nom du vêtement -->
-                <span class="name text-base text-body">Vêtement</span>
+                <span class="name text-base text-body">Sac à main</span>
             <!-- Like -->
                 <div class="like">
                   <input type="checkbox" id="lik1" aria-label="add a like">
@@ -156,9 +156,9 @@
             <div class="img green6"></div>
             <!-- Valeur du vêtement -->
             <div class="bottom">
-                <div class="valueclothe text-base text-button">77</div>
+                <div class="valueclothe text-base text-button">2</div>
             <!-- Nom du vêtement -->
-                <span class="name text-base text-body">Vêtement</span>
+                <span class="name text-base text-body">Gilet</span>
             <!-- Like -->
                 <div class="like">
                   <input type="checkbox" id="lik1" aria-label="add a like">
@@ -170,9 +170,9 @@
             <div class="img green7"></div>
             <!-- Valeur du vêtement -->
             <div class="bottom">
-                <div class="valueclothe text-base text-button">77</div>
+                <div class="valueclothe text-base text-button">5</div>
             <!-- Nom du vêtement -->
-                <span class="name text-base text-body">Vêtement</span>
+                <span class="name text-base text-body">Casquette</span>
             <!-- Like -->
                 <div class="like">
                   <input type="checkbox" id="lik1" aria-label="add a like">
@@ -184,9 +184,9 @@
             <div class="img green8"></div>
             <!-- Valeur du vêtement -->
             <div class="bottom">
-                <div class="valueclothe text-base text-button">77</div>
+                <div class="valueclothe text-base text-button">7</div>
             <!-- Nom du vêtement -->
-                <span class="name text-base text-body">Vêtement</span>
+                <span class="name text-base text-body">Veste</span>
             <!-- Like -->
                 <div class="like">
                   <input type="checkbox" id="lik1" aria-label="add a like">
