--- a/scan-search.html
+++ b/scan-search.html
@@ -88,9 +88,9 @@
           <div class="img orange1"></div>
         <!-- Valeur du vêtement -->
           <div class="bottom">
-            <div class="valueclothe text-base text-button">77</div>
+            <div class="valueclothe text-base text-button">3</div>
         <!-- Nom du vêtement -->
-            <span class="name text-base text-body">Vêtement</span>
+            <span class="name text-base text-body">Veste</span>
         <!-- Like -->
             <div class="like">
               <input type="checkbox" id="lik1" aria-label="add a like">
@@ -102,9 +102,9 @@
               <div class="img orange2"></div>
             <!-- Valeur du vêtement -->
               <div class="bottom">
-                <div class="valueclothe text-base text-button">77</div>
+                <div class="valueclothe text-base text-button">5</div>
             <!-- Nom du vêtement -->
-                <span class="name text-base text-body">Vêtement</span>
+                <span class="name text-base text-body">Veste</span>
             <!-- Like -->
                 <div class="like">
                   <input type="checkbox" id="lik1" aria-label="add a like">
@@ -116,9 +116,9 @@
             <div class="img orange3"></div>
             <!-- Valeur du vêtement -->
             <div class="bottom">
-                <div class="valueclothe text-base text-button">77</div>
+                <div class="valueclothe text-base text-button">1</div>
             <!-- Nom du vêtement -->
-                <span class="name text-base text-body">Vêtement</span>
+                <span class="name text-base text-body">Veste</span>
             <!-- Like -->
                 <div class="like">
                   <input type="checkbox" id="lik1" aria-label="add a like">
@@ -130,9 +130,9 @@
             <div class="img orange4"></div>
             <!-- Valeur du vêtement -->
             <div class="bottom">
-                <div class="valueclothe text-base text-button">77</div>
+                <div class="valueclothe text-base text-button">6</div>
             <!-- Nom du vêtement -->
-                <span class="name text-base text-body">Vêtement</span>
+                <span class="name text-base text-body">Veste</span>
             <!-- Like -->
                 <div class="like">
                   <input type="checkbox" id="lik1" aria-label="add a like">
@@ -144,9 +144,9 @@
             <div class="img orange5"></div>
             <!-- Valeur du vêtement -->
             <div class="bottom">
-                <div class="valueclothe text-base text-button">77</div>
+                <div class="valueclothe text-base text-button">9</div>
             <!-- Nom du vêtement -->
-                <span class="name text-base text-body">Vêtement</span>
+                <span class="name text-base text-body">Doudoune</span>
             <!-- Like -->
                 <div class="like">
                   <input type="checkbox" id="lik1" aria-label="add a like">
@@ -158,9 +158,9 @@
             <div class="img orange6"></div>
             <!-- Valeur du vêtement -->
             <div class="bottom">
-                <div class="valueclothe text-base text-button">77</div>
+                <div class="valueclothe text-base text-button">2</div>
             <!-- Nom du vêtement -->
-                <span class="name text-base text-body">Vêtement</span>
+                <span class="name text-base text-body">Veste</span>
             <!-- Like -->
                 <div class="like">
                   <input type="checkbox" id="lik1" aria-label="add a like">
