--- a/page-ouverture.html
+++ b/page-ouverture.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ouverture</title>
-    <link rel="stylesheet" href="page-ouverture.css">
+    <link rel="stylesheet" href="style-ouverture.css">
 </head>
 <body>
     <img class="dame" src="img/dameverte.png" width="320" height="349" />
