--- a/messages.html
+++ b/messages.html
@@ -10,9 +10,11 @@
 <body>
 
     <span class="title">
+       <a href="message.html">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="22" fill="none" viewBox="0 0 20 22">
-            <path stroke="#494C68" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-opacity=".9" stroke-width="1.5" d="m12.5 17.54-5.433-5.582a1.733 1.733 0 0 1 0-2.397L12.5 3.98"/>
+          <path stroke="#494C68" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-opacity=".9" stroke-width="1.5" d="m12.5 17.54-5.433-5.582a1.733 1.733 0 0 1 0-2.397L12.5 3.98"/>
         </svg>
+       </a>
         <h1 class="text-base text-button2">Marcùs Tessier</h1>
     </span>
 
@@ -65,15 +67,17 @@
         </a>
           <!-- MESSAGE ICON -->
         <a class="iconb" href="message.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 20 20">
-            <g clip-path="url(#a)">
-              <path fill="#fff" fill-opacity=".01" d="M20 0H0v20h20V0Z"/>
-              <path stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M1.667 2.5h16.666V15h-6.25L10 17.083 7.917 15h-6.25V2.5Z"/>
-              <path stroke="#000" stroke-linecap="round" stroke-width="1.5" d="M9.584 8.75h.834m3.332 0h.833m-9.166 0h.833"/>
+          <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_564_5655)">
+              <path d="M20 0H0V20H20V0Z" fill="white" fill-opacity="0.01"/>
+              <path d="M1.66699 2.5H18.3337V15H12.0837L10.0003 17.0833L7.91699 15H1.66699V2.5Z" stroke="#6333FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M9.58301 8.75H10.4174" stroke="#6333FF" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M13.75 8.75H14.5829" stroke="#6333FF" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M5.41699 8.75H6.24987" stroke="#6333FF" stroke-width="1.5" stroke-linecap="round"/>
             </g>
             <defs>
-              <clipPath id="a">
-                <path fill="#fff" d="M0 0h20v20H0z"/>
+              <clipPath id="clip0_564_5655">
+                <rect width="20" height="20" fill="white"/>
               </clipPath>
             </defs>
           </svg>
