--- a/profil.html
+++ b/profil.html
@@ -10,9 +10,6 @@
 <body>
 
     <span class="title">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="22" fill="none" viewBox="0 0 20 22">
-            <path stroke="#494C68" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-opacity=".9" stroke-width="1.5" d="m12.5 17.54-5.433-5.582a1.733 1.733 0 0 1 0-2.397L12.5 3.98"/>
-        </svg>
         <h1 class="text-base text-title">Votre impact</h1>
     </span>
     <div class="yourimpact">
@@ -222,9 +219,9 @@
         
     </div>
 
-    <div class="navbar5">
+    <div class="navbar">
         <div class="bar">
-          <a class="icons home" href="#">
+          <a class="icons home" href="home-green.html">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
               <g clip-path="url(#a)">
                 <path fill="#fff" fill-opacity=".01" d="M24 0H0v24h24V0Z"/>
@@ -268,7 +265,7 @@
               </defs>
             </svg>
           </a>
-          <a class="icons account" href="#">
+          <a class="icons account" href="page-article.html">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
               <path fill="#fff" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10a4 4 0 1 0 0-8 4 4 0 0 0 0 8Z"/>
               <path fill="#fff" d="M21 22a9 9 0 1 0-18 0"/>
@@ -276,11 +273,14 @@
             </svg>
           </a>
         </div>
-        <div class="circle">
+        <a href="page-scan.html">
+          <div class="circle">
           <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="none" viewBox="0 0 22 22">
             <path stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7.333 2.75H3.667a.917.917 0 0 0-.917.917v3.666M7.333 19.25H3.667a.917.917 0 0 1-.917-.916v-3.667m11.917 4.583h3.666c.507 0 .917-.41.917-.916v-3.667M14.667 2.75h3.666c.507 0 .917.41.917.917v3.666M14.667 11H7.333M11 14.666V7.333"/>
           </svg>
         </div>
+        </a>
+        
       </div>
     <div id="popup1" class="overlay text-base">
         <div class="popup">
