--- a/page-scan.html
+++ b/page-scan.html
@@ -17,27 +17,30 @@
 <body>
   
          <!-- CROSS ICON -->
-         <a class="iconc" href="">
+         <a class="iconc" href="javascript:history.back()">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                 <path stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M17.577 5.876 5.86 17.56M5.85 5.85l11.702 11.702"/>
               </svg>
           </a>
 
              <!-- SEARCH -->
-    <button class="button loop">
-        <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="none" viewBox="0 0 35 35">
-          <g clip-path="url(#a)">
-            <path fill="#fff" fill-opacity=".01" d="M35 0H0v35h35V0Z"/>
-            <path stroke="#fff" stroke-linejoin="round" stroke-width="2" d="M15.313 27.709c6.845 0 12.395-5.55 12.395-12.396 0-6.846-5.55-12.396-12.395-12.396-6.846 0-12.396 5.55-12.396 12.396 0 6.846 5.55 12.396 12.396 12.396Z"/>
-            <path stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.437 10.459a5.815 5.815 0 0 0-4.125-1.709c-1.61 0-3.069.653-4.124 1.709m13.036 13.766 6.187 6.187"/>
-          </g>
-          <defs>
-            <clipPath id="a">
-              <path fill="#fff" d="M0 0h35v35H0z"/>
-            </clipPath>
-          </defs>
-        </svg>
-      </button>
+            <a href="scan-search.html">
+              <button class="button loop">
+                <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="none" viewBox="0 0 35 35">
+                  <g clip-path="url(#a)">
+                    <path fill="#fff" fill-opacity=".01" d="M35 0H0v35h35V0Z"/>
+                    <path stroke="#fff" stroke-linejoin="round" stroke-width="2" d="M15.313 27.709c6.845 0 12.395-5.55 12.395-12.396 0-6.846-5.55-12.396-12.395-12.396-6.846 0-12.396 5.55-12.396 12.396 0 6.846 5.55 12.396 12.396 12.396Z"/>
+                    <path stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.437 10.459a5.815 5.815 0 0 0-4.125-1.709c-1.61 0-3.069.653-4.124 1.709m13.036 13.766 6.187 6.187"/>
+                  </g>
+                  <defs>
+                    <clipPath id="a">
+                      <path fill="#fff" d="M0 0h35v35H0z"/>
+                    </clipPath>
+                  </defs>
+                </svg>
+              </button>
+            </a>
+    
 
       <!-- FLASH Icon -->
       <button class="iconw flash">
